# fastgrep

./: .gitignore  BENCHMARK.md  Cargo.toml  README.md  README_zh.md  REPORT.md  REPORT_zh.md  install.sh  results.csv  results_medium.csv  results_mmkb.csv
.claude/skills/fastgrep/: SKILL.md
crates/fastgrep-bench/: Cargo.toml
crates/fastgrep-bench/src/: corpus.rs  main.rs  report.rs  runner.rs
crates/fastgrep-cli/: Cargo.toml
crates/fastgrep-cli/src/: main.rs  output.rs
crates/fastgrep-cli/src/cmd/: index.rs  mod.rs  search.rs  status.rs
crates/fastgrep-cli/tests/: correctness.rs
crates/fastgrep-core/: Cargo.toml
crates/fastgrep-core/src/: git.rs  lib.rs
crates/fastgrep-core/src/index/: builder.rs  delta.rs  format.rs  mod.rs  posting.rs  reader.rs  writer.rs
crates/fastgrep-core/src/ngram/: extract.rs  mod.rs  weight.rs
crates/fastgrep-core/src/query/: decompose.rs  execute.rs  mod.rs  plan.rs
crates/fastgrep-core/tests/: integration.rs
scripts/: install.sh
skill/: fastgrep.md  install.sh
