[workspace]
members = [
    "crates/fastgrep-core",
    "crates/fastgrep-cli",
    "crates/fastgrep-bench",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
fastgrep-core = { path = "crates/fastgrep-core" }
regex = "1"
regex-syntax = "0.8"
memmap2 = "0.9"
crc32fast = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
anyhow = "1"
thiserror = "2"
gix = { version = "0.70", default-features = false, features = ["revision"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
